[tool.poetry]
name = "fundamentals-of-calculus-in-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fundamentals_of_calculus_in_python"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.2"
notebook = "^6.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
